Adicionar verificação de status dos links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         <tr>
                             <th>URL</th>
                             <th>Quantidade</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody id="linkTable">
