--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="main-container">
     <header>
         <h1>Analisador de HTML SEO PagueMenos</h1>
         <p>Desenvolvido por Junior Silva</p>
@@ -58,6 +59,7 @@
                 </table>
             </div>
         </div>
+    </div>
     </div>
 
     <script src="script.js"></script>
